<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    android:background="#121212"
    android:paddingTop="20dp">


    <TextView
        android:id="@+id/main_msg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        android:textSize="36dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:fontFamily="@font/fascinate">
    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>